Create and style the navigation bar

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,9 @@ body {
 
 //UTILITIES
 
+.active {
+    border-bottom: 2px solid $color-primary;
+}
 
 h1, h2, h3, h4 {
     font-family: 'Bellefair', serif;
@@ -63,13 +66,85 @@ header {
         background: url(../images/Home-image2.png) no-repeat center center/cover;
     }
 
-    .nav {
+    .navbar {
         width: 100%;
         height: 10%;
-        border: 1px solid white;
+        // border: 1px solid white;
         position: absolute;
-        top: 2rem;
+        top: 1rem;
         left: 0;
+
+        display: flex;
+        // justify-content: center;
+        align-items: center ;
+
+        .logo {
+            position: absolute;
+            left: 3%;
+            width: 3.8rem;
+            height: 3.8rem;
+            background-color: $color-primary;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center ;
+        }
+
+        .line {
+            height: 1px;
+            width: 33%;
+            background-color: #ffffff;
+            position: absolute;
+            // right: 40%;
+            position: absolute;
+            left: 12%;
+
+        }
+
+        .nav {
+            width: 57%;
+            position: absolute;
+            right: -1%;
+            background-color: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(5px);
+            opacity: 0.9;
+        
+
+            ol {
+                display: flex;
+                justify-content: space-evenly;
+            
+
+                li {
+                    // display: inline-block;
+                    // padding: 1rem;
+                    
+                    
+                    a {
+                        display: inline-block;
+                        text-decoration: none;
+                        color: #ffffff;
+                        font-size: 1.2rem;
+                        font-weight: 400;
+                        padding: 1rem;
+                        // border-bottom: 1px solid transparent;
+                        transition: 0.3s all;
+                        
+                        &:hover {
+                            border-bottom: 1px solid $color-secondary;
+                        }
+                        
+                    }
+
+                    span {
+                        font-weight: 700;
+                        margin-right: 0.5rem;
+                    }
+                }
+            }
+
+
+        }
     }
 
     .header_content {
