--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,7 @@
 
 body {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 .active {
@@ -69,17 +70,17 @@ header .navbar .logo {
   align-items: center;
 }
 header .navbar .line {
-  height: 1px;
+  height: 0.5px;
   width: 33%;
   background-color: #ffffff;
   position: absolute;
   position: absolute;
-  left: 12%;
+  left: 10.5%;
 }
 header .navbar .nav {
   width: 57%;
   position: absolute;
-  right: -1%;
+  right: -0.5%;
   background-color: rgba(255, 255, 255, 0.2);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
@@ -88,6 +89,7 @@ header .navbar .nav {
 header .navbar .nav ol {
   display: flex;
   justify-content: space-evenly;
+  list-style: none;
 }
 header .navbar .nav ol li a {
   display: inline-block;
@@ -99,7 +101,7 @@ header .navbar .nav ol li a {
   transition: 0.3s all;
 }
 header .navbar .nav ol li a:hover {
-  border-bottom: 1px solid #d0d6f9;
+  border-bottom: 1px solid #fff;
 }
 header .navbar .nav ol li span {
   font-weight: 700;
@@ -138,13 +140,30 @@ header .header__btn {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  transition: all 0.3s;
 }
-header .header__btn .btn {
-  display: inline-block;
-  width: 50%;
+header .header__btn::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  background-color: blue;
+  z-index: -1;
+}
+header .header__btn .landing-btn {
+  padding: 4.1rem 3rem;
   border-radius: 50%;
   color: #0b0d17;
   font-size: 2rem;
   text-decoration: none;
   text-align: center;
+}
+header .header__btn .landing-btn .header__btn:hover ~ .landing-btn {
+  transform: scale(1.1);
+  background-color: #0b0d17;
+  opacity: 0.4;
 }/*# sourceMappingURL=main.css.map */
