--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,11 +14,16 @@ $color-tetiary: #0b0d17;
 *::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
+}
+
+html {
+
+    font-size: 62.5%;
 }
 
 body {
-    font-size: 62.5%;
+    box-sizing: border-box;
     overflow-x: hidden;
 }
 
@@ -37,19 +42,28 @@ h5, p, a {
     font-family: 'Barlow Condensed', sans-serif;
 }
 
+.heading-5 {
+        font-size: 2.8rem;
+        line-height: 3.36rem;
+        letter-spacing: 0.4725rem;
+        font-family: 'Barlow Condensed', sans-serif;
+        font-weight: 400;
+        text-transform: uppercase;
+}
+
 .heading-1 {
-    font-size: 8.2rem ;
-    // line-height: ;
+    font-size: 15rem ;
+    line-height: 17.19rem;
     color: $color-primary;
 }
 
 //THE NAVBAR STYLING FOR THE ENTIRE PROJECT
 .navbar {
     width: 100%;
-    height: 10%;
+    height: 9.8rem;
     // border: 1px solid white;
     position: absolute;
-    top: 1rem;
+    top: 1.5rem;
     left: 0;
 
     display: flex;
@@ -59,8 +73,8 @@ h5, p, a {
     .logo {
         position: absolute;
         left: 3%;
-        width: 3.8rem;
-        height: 3.8rem;
+        width: 4.8rem;
+        height: 4.8rem;
         background-color: $color-primary;
         border-radius: 50%;
         display: flex;
@@ -81,9 +95,9 @@ h5, p, a {
 
     .nav {
         width: 57%;
-        position: absolute;
+        position: fixed;
         right: -0.5%;
-        background-color: rgba(255, 255, 255, 0.2);
+        background-color: rgba(255, 255, 255, 0.04);
         backdrop-filter: blur(5px);
         opacity: 0.9;
         
@@ -103,9 +117,11 @@ h5, p, a {
                     display: inline-block;
                     text-decoration: none;
                     color: #ffffff;
-                    font-size: 1.2rem;
+                    font-size: 1.6rem;
+                    line-height: 1.92rem;
+                    letter-spacing: 0.2rem;
                     font-weight: 400;
-                    padding: 1rem;
+                    padding: 2rem;
                     // border-bottom: 1px solid transparent;
                     transition: 0.3s all;
                     
@@ -160,17 +176,14 @@ header {
         width: 50%;
       
         h5 {
-
-            font-size: 1.75rem;
-            line-height: 3.3;
-            color: #d0d6f9;
+            color: $color-secondary;
         }
 
         p {
-            width: 25rem;
-            font-size: 1.125rem;
-            line-height: 1.6;
-            word-spacing: 4.75;
+            width: 44.4rem;
+            font-size: 1.8rem;
+            line-height: 3.2rem;
+            // word-spacing: 4.75;
             color: #d0d6f9;
             text-align: justify;
 
@@ -180,15 +193,15 @@ header {
     .header__btn {
         position: absolute;
         bottom: 10%;
-        right: 20%;
-        height: 12rem;
-        width: 12rem;
+        right: 15%;
+        height: 27.8rem;
+        width: 27.8rem;
         border-radius: 50%;
         background-color: $color-primary;
         border: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
         cursor: pointer;
         transition: all 0.3s;
 
@@ -197,33 +210,38 @@ header {
        
         
         // Finding ways to create interactivity to the landing page buttons
-        &::before {
-            content: "";
-            position: absolute;
-            left: 0;
-            top: 0;
-            height: 100%;
-            width: 100%;
-            border-radius: 50%;
-            background-color: blue;
-            z-index: -1;
+        // &::before {
+        //     content: "";
+        //     position: absolute;
+        //     left: 0;
+        //     top: 0;
+        //     height: 100%;
+        //     width: 100%;
+        //     border-radius: 50%;
+        //     background-color: blue;
+        //     z-index: -1;
            
-        }
+        // }
         
         
         
         .landing-btn {
-            padding: 4.1rem 3rem;
-            // width: 50%;
-            // height: 50%;
+            display: flex;
+        justify-content: center;
+        align-items: center;
+            // padding: 4.1rem 3rem;
+            width: 100%;
+            height: 100%;
             border-radius: 50%;
-            color: $color-tetiary;
-            font-size: 2rem;
+            color: rgba(11, 13, 23, 1);
+            font-size: 3.2rem;
+            line-height: 3.667rem;
+            letter-spacing: 0.2rem;
             text-decoration: none;
-            text-align: center;
-            // background-color: #d0d6f9;
+            // text-align: center;
+            background-color: #d0d6f9;
             
-            .header__btn:hover ~ .landing-btn   {
+            .landing-btn:hover ~ .header__btn    {
                 transform: scale(1.1);
                 background-color: $color-tetiary;
                 opacity: 0.4;
@@ -241,8 +259,49 @@ header {
     width: 100vw;
     // background-color: $color-tetiary;
     background: url(../images/dest-bg.jpg) center center/cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: $color-primary;
 
-    
+    .content__wrap {
+        width: 80vw;
+        height: 80vh;
+        border: 1px solid #fff;
+        margin-top: 3rem;
+        display: flex;
+    }
+
+    .content__wrap-img {
+        width: 50%;
+        height: 100%;
+        border: 1px solid #fff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        span {
+            font-weight: 700;
+            opacity: 0.25;
+            letter-spacing: 4.725px;
+        }
+
+        .image {
+            height: 80%;
+            width: 80%;
+            // border: 1px solid #fff;
+            background:  url(../images/dest-moon1.png) no-repeat center center/contain;
+        
+
+        }
+    }
+
+    .content__wrap-text {
+        width: 50%;
+        height: 100%;
+        border: 1px solid #fff;
+    }
 
 
 }
