--- a/styles/main.css
+++ b/styles/main.css
@@ -5,11 +5,15 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
-  font-size: 62.5%;
+  box-sizing: border-box;
   overflow-x: hidden;
 }
 
@@ -26,16 +30,26 @@ h5, p, a {
   font-family: "Barlow Condensed", sans-serif;
 }
 
+.heading-5 {
+  font-size: 2.8rem;
+  line-height: 3.36rem;
+  letter-spacing: 0.4725rem;
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
 .heading-1 {
-  font-size: 8.2rem;
+  font-size: 15rem;
+  line-height: 17.19rem;
   color: #ffffff;
 }
 
 .navbar {
   width: 100%;
-  height: 10%;
+  height: 9.8rem;
   position: absolute;
-  top: 1rem;
+  top: 1.5rem;
   left: 0;
   display: flex;
   align-items: center;
@@ -43,8 +57,8 @@ h5, p, a {
 .navbar .logo {
   position: absolute;
   left: 3%;
-  width: 3.8rem;
-  height: 3.8rem;
+  width: 4.8rem;
+  height: 4.8rem;
   background-color: #ffffff;
   border-radius: 50%;
   display: flex;
@@ -61,9 +75,9 @@ h5, p, a {
 }
 .navbar .nav {
   width: 57%;
-  position: absolute;
+  position: fixed;
   right: -0.5%;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.04);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   opacity: 0.9;
@@ -77,9 +91,11 @@ h5, p, a {
   display: inline-block;
   text-decoration: none;
   color: #ffffff;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
+  line-height: 1.92rem;
+  letter-spacing: 0.2rem;
   font-weight: 400;
-  padding: 1rem;
+  padding: 2rem;
   transition: 0.3s all;
 }
 .navbar .nav ol li a:hover {
@@ -117,53 +133,42 @@ header .header_content {
   width: 50%;
 }
 header .header_content h5 {
-  font-size: 1.75rem;
-  line-height: 3.3;
   color: #d0d6f9;
 }
 header .header_content p {
-  width: 25rem;
-  font-size: 1.125rem;
-  line-height: 1.6;
-  word-spacing: 4.75;
+  width: 44.4rem;
+  font-size: 1.8rem;
+  line-height: 3.2rem;
   color: #d0d6f9;
   text-align: justify;
 }
 header .header__btn {
   position: absolute;
   bottom: 10%;
-  right: 20%;
-  height: 12rem;
-  width: 12rem;
+  right: 15%;
+  height: 27.8rem;
+  width: 27.8rem;
   border-radius: 50%;
   background-color: #ffffff;
   border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   cursor: pointer;
   transition: all 0.3s;
 }
-header .header__btn::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  border-radius: 50%;
-  background-color: blue;
-  z-index: -1;
-}
 header .header__btn .landing-btn {
-  padding: 4.1rem 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
-  color: #0b0d17;
-  font-size: 2rem;
+  color: rgb(11, 13, 23);
+  font-size: 3.2rem;
+  line-height: 3.667rem;
+  letter-spacing: 0.2rem;
   text-decoration: none;
-  text-align: center;
+  background-color: #d0d6f9;
 }
-header .header__btn .landing-btn .header__btn:hover ~ .landing-btn {
+header .header__btn .landing-btn .landing-btn:hover ~ .header__btn {
   transform: scale(1.1);
   background-color: #0b0d17;
   opacity: 0.4;
@@ -173,4 +178,39 @@ header .header__btn .landing-btn .header__btn:hover ~ .landing-btn {
   height: 100vh;
   width: 100vw;
   background: url(../images/dest-bg.jpg) center center/cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+}
+#destination .content__wrap {
+  width: 80vw;
+  height: 80vh;
+  border: 1px solid #fff;
+  margin-top: 3rem;
+  display: flex;
+}
+#destination .content__wrap-img {
+  width: 50%;
+  height: 100%;
+  border: 1px solid #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#destination .content__wrap-img span {
+  font-weight: 700;
+  opacity: 0.25;
+  letter-spacing: 4.725px;
+}
+#destination .content__wrap-img .image {
+  height: 80%;
+  width: 80%;
+  background: url(../images/dest-moon1.png) no-repeat center center/contain;
+}
+#destination .content__wrap-text {
+  width: 50%;
+  height: 100%;
+  border: 1px solid #fff;
 }/*# sourceMappingURL=main.css.map */
