--- a/scss/main.scss
+++ b/scss/main.scss
@@ -194,58 +194,47 @@ header {
         position: absolute;
         bottom: 10%;
         right: 15%;
-        height: 27.8rem;
-        width: 27.8rem;
-        border-radius: 50%;
-        background-color: $color-primary;
-        border: none;
-        // display: flex;
-        // justify-content: center;
-        // align-items: center;
-        cursor: pointer;
-        transition: all 0.3s;
-
-        
+        text-align: center;  
             
-       
-        
-        // Finding ways to create interactivity to the landing page buttons
-        // &::before {
-        //     content: "";
-        //     position: absolute;
-        //     left: 0;
-        //     top: 0;
-        //     height: 100%;
-        //     width: 100%;
-        //     border-radius: 50%;
-        //     background-color: blue;
-        //     z-index: -1;
-           
-        // }
         
         
-        
-        .landing-btn {
-            display: flex;
-        justify-content: center;
-        align-items: center;
-            // padding: 4.1rem 3rem;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
+        .landing-btn:link,
+        .landing-btn:visited {
+            display: inline-block;
+            height: 26.4rem;
+            width: 26.4rem;
             color: rgba(11, 13, 23, 1);
             font-size: 3.2rem;
             line-height: 3.667rem;
             letter-spacing: 0.2rem;
             text-decoration: none;
-            // text-align: center;
-            background-color: #d0d6f9;
+            padding: 40% 30%;
+            background-color: $color-primary;
+            border-radius: 50%;
+            position: relative;
+            isolation: isolate; //To create a new stacking context.
             
-            .landing-btn:hover ~ .header__btn    {
-                transform: scale(1.1);
-                background-color: $color-tetiary;
-                opacity: 0.4;
+            
+            //CREATING AN AFTER PSEUDO ELEMENT WHICH WILL SCALE BEHIND THE MAIN BUTTON ELEMENT TO GIVE THE EXPECTED HOVER EFFECT
+            &::after {
+                content: "";
+                position: absolute;
+                left: 0;
+                top: 0;
+                height: 100%;
+                width: 100%;
+                border-radius: 50%;
+                background-color: $color-primary;
+                z-index: -1;
+                transition: all 0.3s;
+               
             }
+            
+            &:hover::after {
+                transform: scale(1.3);
+                opacity: 0;
+            }
+            
         }
     }
     
