--- a/styles/main.css
+++ b/styles/main.css
@@ -146,32 +146,41 @@ header .header__btn {
   position: absolute;
   bottom: 10%;
   right: 15%;
-  height: 27.8rem;
-  width: 27.8rem;
-  border-radius: 50%;
-  background-color: #ffffff;
-  border: none;
-  cursor: pointer;
-  transition: all 0.3s;
+  text-align: center;
 }
-header .header__btn .landing-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
+header .header__btn .landing-btn:link,
+header .header__btn .landing-btn:visited {
+  display: inline-block;
+  height: 26.4rem;
+  width: 26.4rem;
   color: rgb(11, 13, 23);
   font-size: 3.2rem;
   line-height: 3.667rem;
   letter-spacing: 0.2rem;
   text-decoration: none;
-  background-color: #d0d6f9;
+  padding: 40% 30%;
+  background-color: #ffffff;
+  border-radius: 50%;
+  position: relative;
+  isolation: isolate;
 }
-header .header__btn .landing-btn .landing-btn:hover ~ .header__btn {
-  transform: scale(1.1);
-  background-color: #0b0d17;
-  opacity: 0.4;
+header .header__btn .landing-btn:link::after,
+header .header__btn .landing-btn:visited::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  background-color: #ffffff;
+  z-index: -1;
+  transition: all 0.3s;
+}
+header .header__btn .landing-btn:link:hover::after,
+header .header__btn .landing-btn:visited:hover::after {
+  transform: scale(1.3);
+  opacity: 0;
 }
 
 #destination {
