--- a/scss/main.scss
+++ b/scss/main.scss
@@ -192,7 +192,7 @@ header {
 
     .header__btn {
         position: absolute;
-        bottom: 10%;
+        bottom: 15%;
         right: 15%;
         text-align: center;  
             
@@ -208,7 +208,7 @@ header {
             line-height: 3.667rem;
             letter-spacing: 0.2rem;
             text-decoration: none;
-            padding: 40% 30%;
+            padding: 40% 23%;
             background-color: $color-primary;
             border-radius: 50%;
             position: relative;
@@ -231,8 +231,9 @@ header {
             }
             
             &:hover::after {
-                transform: scale(1.3);
-                opacity: 0;
+                transform: scale(1.6);
+                opacity: 0.1;
+                mix-blend-mode: normal;
             }
             
         }
@@ -254,21 +255,27 @@ header {
     color: $color-primary;
 
     .content__wrap {
-        width: 80vw;
-        height: 80vh;
-        border: 1px solid #fff;
-        margin-top: 3rem;
+        width: 90%;
+        height: 100%;
+        // border: 1px solid #fff;
+        // margin-top: 3rem;
         display: flex;
+        padding: 1.5rem 0;
     }
 
     .content__wrap-img {
         width: 50%;
         height: 100%;
-        border: 1px solid #fff;
+        // border: 1px solid #fff;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        // gap: 9.8rem;
+
+        h5 {
+            margin-top: 10rem;
+        }
 
         span {
             font-weight: 700;
@@ -277,10 +284,10 @@ header {
         }
 
         .image {
-            height: 80%;
-            width: 80%;
-            // border: 1px solid #fff;
-            background:  url(../images/dest-moon1.png) no-repeat center center/contain;
+            height: 40.5rem;
+            width: 40.5rem;
+            background:  url(../images/destination-img.png) no-repeat center center/contain;
+            margin-top: 5rem;
         
 
         }
@@ -289,8 +296,83 @@ header {
     .content__wrap-text {
         width: 50%;
         height: 100%;
-        border: 1px solid #fff;
+        // border: 1px solid #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+        // margin-top: 4rem;
+        padding: 0 7rem;
+
+
+        nav {
+
+            margin-top: 20rem;
+
+            ul { 
+                list-style: none;
+                display: flex;
+
+                    a {
+                        display: inline-block;
+                        font-size: 1.6rem;
+                        font-weight: 400;
+                        line-height: 1.92rem;
+                        letter-spacing: 0.27rem;
+                        color: #fff;
+                        // padding: 0.5rem;
+                        text-decoration: none;
+                        margin-right: 2rem;
+                    }
+            }
+
+        }
+
     }
+        .content-heading {
+            font-size: 10rem;
+            line-height: 11.5rem;
+            font-weight: 400;
+        }
+
+        .content-para {
+            font-size: 1.8rem;
+            line-height: 3.2rem;
+            color: $color-secondary;
+            text-align: justify;
+            border-bottom: 1px solid #777;
+            padding-bottom: 3rem;
+        }
+
+        .content__wrap-footer {
+
+            display: flex;
+            align-self: flex-start;
+            gap: 5rem;
+            text-transform: uppercase;
+            font-style: normal;
+            font-weight: 400;
+
+            
+            .foot-text-sm {
+
+                font-family: 'Barlow Condensed';
+                font-size: 1.4rem;
+                line-height: 1.7rem;
+                letter-spacing: 0.23625rem;
+                color: $color-secondary;
+                margin: 1rem 0.5rem;
+            }
+
+            .foot-text-lg {
+
+                font-family: 'Bellefair';
+                font-size: 2.8rem;
+                line-height: 3.2rem;
+
+            }
+        }
 
 
 }
