--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,7 +24,7 @@ html {
 
 body {
     box-sizing: border-box;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 //UTILITIES
@@ -40,6 +40,16 @@ h1, h2, h3, h4 {
 
 h5, p, a {
     font-family: 'Barlow Condensed', sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: $color-primary;
+    transition: all 0.1s;
+}
+
+a:hover {
+    border-bottom: 2px solid $color-secondary;
 }
 
 .heading-5 {
@@ -62,7 +72,7 @@ h5, p, a {
     width: 100%;
     height: 9.8rem;
     // border: 1px solid white;
-    position: absolute;
+    position: fixed;
     top: 1.5rem;
     left: 0;
 
@@ -95,7 +105,7 @@ h5, p, a {
 
     .nav {
         width: 57%;
-        position: fixed;
+        position: absolute;
         right: -0.5%;
         background-color: rgba(255, 255, 255, 0.04);
         backdrop-filter: blur(5px);
@@ -123,12 +133,7 @@ h5, p, a {
                     font-weight: 400;
                     padding: 2rem;
                     // border-bottom: 1px solid transparent;
-                    transition: 0.3s all;
-                    
-                    &:hover {
-                        border-bottom: 1px solid #fff;
-                    }
-                    
+                    // transition: all 0.1s;
                 }
 
                 span {
@@ -245,14 +250,19 @@ header {
 
 // STYLING FOR DESTINATION SECTION
 #destination {
-    height: 100vh;
+    height: fit-content;
     width: 100vw;
-    // background-color: $color-tetiary;
-    background: url(../images/dest-bg.jpg) center center/cover;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: $color-primary;
+
+    .container {
+        height: 100vh;
+        width: 100vw;
+        background: url(../images/dest-bg.jpg) center center/cover;
+    }
 
     .content__wrap {
         width: 90%;
@@ -286,11 +296,24 @@ header {
         .image {
             height: 40.5rem;
             width: 40.5rem;
-            background:  url(../images/destination-img.png) no-repeat center center/contain;
             margin-top: 5rem;
-        
-
+            
         }
+        
+        .moon-img {
+            background:  url(../images/destination-moon.png) no-repeat center center/contain;
+        }
+        .mars-img {
+            background:  url(../images/destination-mars.png) no-repeat center center/contain;
+        }
+        .europa-img {
+            background:  url(../images/destination-europa.png) no-repeat center center/contain;
+        }
+        .titan-img {
+            background:  url(../images/destination-titan.png) no-repeat center center/contain;
+        }
+
+        
     }
 
     .content__wrap-text {
@@ -299,11 +322,10 @@ header {
         // border: 1px solid #fff;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
         gap: 2rem;
-        // margin-top: 4rem;
-        padding: 0 7rem;
+        padding: 0 12rem;
 
 
         nav {
@@ -316,14 +338,14 @@ header {
 
                     a {
                         display: inline-block;
-                        font-size: 1.6rem;
+                        font-size: 1.7rem;
                         font-weight: 400;
                         line-height: 1.92rem;
                         letter-spacing: 0.27rem;
                         color: #fff;
-                        // padding: 0.5rem;
+                        padding: 0.5rem;
                         text-decoration: none;
-                        margin-right: 2rem;
+                        margin-right: 1.5rem;
                     }
             }
 
@@ -331,24 +353,23 @@ header {
 
     }
         .content-heading {
-            font-size: 10rem;
-            line-height: 11.5rem;
+            font-size: 9rem;
+            line-height: 10.5rem;
             font-weight: 400;
         }
 
         .content-para {
-            font-size: 1.8rem;
+            font-size: 1.7rem;
             line-height: 3.2rem;
             color: $color-secondary;
             text-align: justify;
             border-bottom: 1px solid #777;
-            padding-bottom: 3rem;
+            padding-bottom: 2.5rem;
         }
 
         .content__wrap-footer {
 
             display: flex;
-            align-self: flex-start;
             gap: 5rem;
             text-transform: uppercase;
             font-style: normal;
@@ -362,7 +383,7 @@ header {
                 line-height: 1.7rem;
                 letter-spacing: 0.23625rem;
                 color: $color-secondary;
-                margin: 1rem 0.5rem;
+                margin: 0.8rem 0.5rem;
             }
 
             .foot-text-lg {
